@@ -109,6 +109,9 @@ Version CVS HEAD (?)
   * Fixed instruments, samples and scripts to appear twice after save.
   * Implemented reordering of instruments by drag & drop.
   * Implemented replacing of existing samples.
+  * Added "X" button next to sample reference field, which allows to remove
+    the current sample reference, allowing to create a "silent case" where
+    no sample shall be played.
 
 Version 0.2.0 (2009-07-31)
 
